--- a/NUnit/MyNUnit/Tests/TestDll/OtherTest.csproj
+++ b/NUnit/MyNUnit/Tests/TestDll/OtherTest.csproj
@@ -32,7 +32,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="Attributes">
-      <HintPath>..\Attributes\obj\Debug\Attributes.dll</HintPath>
+      <HintPath>..\..\Attributes\obj\Debug\Attributes.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
