--- a/NUnit/MyNUnit/Tests/TestMethodTest/TestMethodTest.csproj
+++ b/NUnit/MyNUnit/Tests/TestMethodTest/TestMethodTest.csproj
@@ -18,6 +18,11 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <ConsolePause>false</ConsolePause>
+    <CustomCommands>
+      <CustomCommands>
+        <Command type="AfterBuild" command="cp ${SolutionDir}/Tests/TestMethodTest/bin/Debug/TestMethodTest.dll  ${SolutionDir}/Tests/DLL/" workingdir="${SolutionDir}" />
+      </CustomCommands>
+    </CustomCommands>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>full</DebugType>
