--- a/MiniRoguelike/MiniRoguelike/MiniRoguelike.csproj
+++ b/MiniRoguelike/MiniRoguelike/MiniRoguelike.csproj
@@ -1,4 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <Project DefaultTargets="Build" ToolsVersion="4.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -7,7 +7,7 @@
     <OutputType>Exe</OutputType>
     <RootNamespace>MiniRoguelike</RootNamespace>
     <AssemblyName>MiniRoguelike</AssemblyName>
-    <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.7</TargetFrameworkVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|x86' ">
     <DebugSymbols>true</DebugSymbols>
@@ -33,13 +33,14 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Exception\MapReadException.cs" />
+    <Compile Include="Exception\PlayerPositionException.cs" />
+    <Compile Include="GameMap\CellType.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="EventLoop.cs" />
     <Compile Include="GameMap\WorldMap.cs" />
     <Compile Include="DrawWorld.cs" />
     <Compile Include="Player\Player.cs" />
-    <Compile Include="CellType.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
